--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   provider: ^6.1.2 # For state management
   cupertino_icons: ^1.0.2 # Default Cupertino icons
   flutter_lints: ^4.0.0 # For linting and best practices
-  url_launcher: ^6.1.6
+  url_launcher: ^6.1.8
   font_awesome_flutter: ^10.1.0  # Added FontAwesome icons package
   sqflite: ^2.0.0+4  # SQLite database
   path_provider: ^2.0.11  # Path provider for locating database
@@ -19,10 +19,17 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
+  flutter_launcher_icons: "^0.10.0"  # Updated to a more recent version
 
 flutter:
   uses-material-design: true
 
   assets:
     - assets/images/app_icon.png
+
+flutter_icons:
+  android: true  # Enable Android icon generation
+  ios: true      # Enable iOS icon generation
+  image_path: "assets/images/app_icon.png"  # Path to your app icon image
+  adaptive_icon_foreground: "assets/images/foreground.png"
+adaptive_icon_foreground: "#ffffff"
